fix overflow

--- a/src/components/Item/styles.styl
+++ b/src/components/Item/styles.styl
@@ -55,7 +55,7 @@ $substituteColour = #494A4C
 .name
 .itemType
   white-space: nowrap
-  overflow: auto
+  overflow: hidden
   text-overflow: ellipsis
 
 .itemType
